--- a/termproject/pom.xml
+++ b/termproject/pom.xml
@@ -42,7 +42,13 @@
 		    <artifactId>spring-web</artifactId>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
-		 
+		
+		<!-- Use MySQL Connector-J -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
     </dependencies>
 
     <build>
